--- a/package.json
+++ b/package.json
@@ -9,6 +9,6 @@
   "author": "Felix Dimmerling",
   "license": "UNLICENSED",
   "dependencies": {
-    "euler-theme": "github:quaggaone/euler-theme"
+    "euler-theme": "github:quaggaone/euler-theme#v2.0.0-alpha.3"
   }
 }
