--- a/_data/content/15.yaml
+++ b/_data/content/15.yaml
@@ -4,7 +4,6 @@ alias: team
 published: 1
 isfolder: 1
 introtext: ''
-content: ''
 template: 2
 menuindex: 6
 createdby: 1
@@ -12,10 +11,23 @@ createdon: 1742749458
 publishedon: 1742749464
 publishedby: 1
 uri: ''
-properties: '{"contentblocks":{"_isContentBlocks":false},"fred":{"data":{"fingerprint":"b6589fc6ab0dc82cf12099d1c2d40ab994e8410c"}}}'
+properties: '{"contentblocks":{"_isContentBlocks":false},"fred":{"data":{"content":[{"widget":"3af4b450-318a-4848-8d0d-9e8145a2e37a","values":[],"pluginsData":[],"settings":{"length":0,"modifier":"elr-grid__container--row-cols-3","parentPage":{"url":"\/euler\/index.php?id=15","id":"15"},"templateBlog":false,"templateBook":false,"templatePartner":false,"templateValuecard":false,"actionarea":"","filterOperator":"||","valueadd":"","sectionSpacer":"","aspectRatio":"","objectFit":""},"children":[],"elId":"fred_d4990c9_wne7fov8nf"}],"fingerprint":"71b24ec58c7e014181ddfa751220f3c98c4201f2"},"plugins":[]}}'
 tvs:
     elr_header_modifier: ''
     elr_og_image: ''
     elr_og_image_alt: ''
     elr_subtitle: ''
     elr_theme_color: ''
+
+-----
+
+[[pdoResources?
+    &parents=`15`
+    &depth=`1`
+    &limit=`0`
+    &includeTVs=`elr_og_image,elr_og_image_alt,elr_subtitle,elr_theme_color`
+    &tpl=`elr_tpl_card`
+    &tplWrapper=`@INLINE <section class="elr-grid   "><div class="elr-grid__container elr-grid__container--row-cols-3">[[+output]]</div></section>`
+    &tvFilters=``
+    &where=`[[elrGenerateBlogTemplateNameWhereClause?&templateBlog=``&templateBook=``&templatePartner=``&templateValuecard=``]]`
+]]
