--- a/_data/content/16.yaml
+++ b/_data/content/16.yaml
@@ -12,14 +12,14 @@ createdon: 1742749481
 publishedon: 1742749620
 publishedby: 1
 uri: ''
-properties: '{"contentblocks":{"_isContentBlocks":false},"fred":{"data":{"fingerprint":"b6589fc6ab0dc82cf12099d1c2d40ab994e8410c"}}}'
+properties: '{"contentblocks":{"_isContentBlocks":false},"fred":{"data":{"fingerprint":"7ad976beab0f85176b6994de9a149550045721cf"}}}'
 tvs:
     elr_meta_tag: ''
     elr_meta_url: ''
-    elr_og_image: screenshot-2025-03-07-at-19.02.33-(2).png
+    elr_og_image: fabrizio-conti-rMWmDMeaoBk-unsplash.jpg
     elr_og_image_alt: ''
     elr_subtitle: 'Das ist der Subtitle'
-    elr_team_image: screenshot-2025-03-07-at-19.02.33-(2).png
+    elr_team_image: fabrizio-conti-rMWmDMeaoBk-unsplash.jpg
     elr_team_linkedin: ''
     elr_team_title: ''
     elr_theme_color: '--gold'
