FIX display corresponding data on cards for the specific pages template (applies to `populated grid`)

--- a/_data/content/11.yaml
+++ b/_data/content/11.yaml
@@ -13,13 +13,13 @@ createdon: 1742608804
 publishedon: 1742817420
 publishedby: 1
 uri: ''
-properties: '{"contentblocks":{"_isContentBlocks":false},"fred":{"data":{"fingerprint":"6dc32bfec547f41856c17b2084971113f5a27101"}}}'
+properties: '{"contentblocks":{"_isContentBlocks":false},"fred":{"data":{"fingerprint":"cf52f58ca4f4eda28cf07363e0f14e44e1920d06"}}}'
 tvs:
     elr_meta_associatedperson: ''
     elr_meta_author: ''
     elr_meta_book_attributes: ''
     elr_meta_book_category: 'Tabellenbuch,Nachschlagewerk'
-    elr_meta_book_cover: ''
+    elr_meta_book_cover: gabriela-gNHxgFuV-2o-unsplash.jpg
     elr_meta_book_edition: ''
     elr_meta_book_medium: ''
     elr_meta_isbn: ''
