enabled friendly urls (system setting not tracked yet)

--- a/_data/content/10.yaml
+++ b/_data/content/10.yaml
@@ -11,7 +11,7 @@ createdby: 1
 createdon: 1742606522
 publishedon: 1742817420
 publishedby: 1
-uri: ''
+uri: zine-container/insight-artikel.html
 properties: '{"fred":{"data":{"fingerprint":"9ea13238bee1922e22a0193efd90c5d896e92a11"}},"contentblocks":{"_isContentBlocks":false}}'
 tvs:
     elr_meta_associatedperson: '16'
