--- a/_data/content/11.yaml
+++ b/_data/content/11.yaml
@@ -12,7 +12,7 @@ createdby: 1
 createdon: 1742608804
 publishedon: 1742817420
 publishedby: 1
-uri: ''
+uri: zine-container/buch.html
 properties: '{"contentblocks":{"_isContentBlocks":false},"fred":{"data":{"fingerprint":"cf52f58ca4f4eda28cf07363e0f14e44e1920d06"}}}'
 tvs:
     elr_meta_associatedperson: ''
