--- a/_data/content/13.yaml
+++ b/_data/content/13.yaml
@@ -12,7 +12,7 @@ createdby: 1
 createdon: 1742745255
 publishedon: 1742817480
 publishedby: 1
-uri: ''
+uri: zine-container/value-card-title.html
 properties: '{"fred":{"data":{"fingerprint":"6cf9b453b3905a8d3fe5c55a17843169ac299c55"}},"contentblocks":{"_isContentBlocks":false}}'
 tvs:
     elr_layout_card_primary: ''
