--- a/_data/content/16.yaml
+++ b/_data/content/16.yaml
@@ -11,7 +11,7 @@ createdby: 1
 createdon: 1742749481
 publishedon: 1742749620
 publishedby: 1
-uri: ''
+uri: team/bernd-das-brot.html
 properties: '{"contentblocks":{"_isContentBlocks":false},"fred":{"data":{"fingerprint":"d59211786762b72a8865d1d12d27ca0e95c4efb7"}}}'
 tvs:
     elr_meta_tag: ''
