--- a/_data/content/18.yaml
+++ b/_data/content/18.yaml
@@ -9,7 +9,7 @@ template: 2
 menuindex: 1
 createdby: 1
 createdon: 1742818705
-uri: ''
+uri: mehrwert/value-area-child-222.html
 properties: '{"contentblocks":{"_isContentBlocks":false},"fred":{"data":{"fingerprint":"b6589fc6ab0dc82cf12099d1c2d40ab994e8410c"}}}'
 tvs:
     elr_header_modifier: ''
