--- a/_data/content/3.yaml
+++ b/_data/content/3.yaml
@@ -11,7 +11,7 @@ createdby: 1
 createdon: 1742520403
 publishedon: 1742520617
 publishedby: 1
-uri: ''
+uri: info/datenschutzerklärung.html
 properties: '{"contentblocks":{"_isContentBlocks":false},"fred":{"data":{"fingerprint":"b6589fc6ab0dc82cf12099d1c2d40ab994e8410c"}}}'
 tvs:
     elr_header_modifier: ''
