--- a/_data/content/4.yaml
+++ b/_data/content/4.yaml
@@ -10,7 +10,7 @@ createdby: 1
 createdon: 1742520411
 publishedon: 1742520622
 publishedby: 1
-uri: ''
+uri: 404.html
 properties: '{"contentblocks":{"_isContentBlocks":false},"fred":{"data":{"fingerprint":"b6589fc6ab0dc82cf12099d1c2d40ab994e8410c"}}}'
 tvs:
     elr_header_modifier: ''
