--- a/_data/content/14.yaml
+++ b/_data/content/14.yaml
@@ -10,7 +10,7 @@ createdby: 1
 createdon: 1742746726
 publishedon: 1742818683
 publishedby: 1
-uri: ''
+uri: mehrwert/value-area-child.html
 properties: '{"contentblocks":{"_isContentBlocks":false},"fred":{"data":{"fingerprint":"b6589fc6ab0dc82cf12099d1c2d40ab994e8410c"}}}'
 tvs:
     elr_header_modifier: ''
