--- a/_data/content/19.yaml
+++ b/_data/content/19.yaml
@@ -9,7 +9,7 @@ createdon: 1750170170
 publishedon: 1750170618
 publishedby: 1
 content_type: 2
-uri: ''
+uri: rss-feed.xml
 properties: null
 tvs: {  }
 
