--- a/_data/content/7.yaml
+++ b/_data/content/7.yaml
@@ -11,7 +11,7 @@ createdby: 1
 createdon: 1742520481
 publishedon: 1742520556
 publishedby: 1
-uri: null
+uri: mehrwert/
 properties: '{"contentblocks":{"_isContentBlocks":false},"fred":{"data":{"fingerprint":"b6589fc6ab0dc82cf12099d1c2d40ab994e8410c"}}}'
 tvs:
     elr_header_modifier: ''
